api working and client mostly running in local mode
